[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend for digilib library managment system"
authors = ["anandukch <anandukch@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"
dev = "python ./scripts/clean_db.py"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
pymongo = "^4.3.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
beanie = "^1.19.0"
passlib = "^1.7.4"
cloudinary = "^1.33.0"
python-multipart = "^0.0.6"
pyright = "^1.1.311"
bcrypt = "^4.0.1"
pickle-mixin = "^1.0.2"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.4"

[tool.poetry.dev-dependencies]
black = {version = "^23.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
